--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm-run-all": "^4.0.2"
   },
   "dependencies": {
-    "dotenv": "^4.0.0"
+    "dotenv": "^4.0.0",
+    "redis": "^2.8.0"
   }
 }
