--- a/.env.exemple
+++ b/.env.exemple
@@ -7,4 +7,8 @@ DB_NAME = db
 SERVER_HOST = localhost
 SERVER_PORT = 3000
 
+REDIS_ENABLE = 0
+REDIS_HOST = localhost
+REDIS_PORT = 6379
+
 JWT_HASH = someWeirdHash
